# MemoryAllocatorM1

./: CMakeLists.txt  Makefile  README.md  bib.txt  main.c
src/: CMakeLists.txt  allocator.c  allocator.h  main.c  myAllocator.c  perf_cmp.c
test/: CMakeLists.txt  test.c
